--- a/07-Backend-MVC/CarritoCompras/package.json
+++ b/07-Backend-MVC/CarritoCompras/package.json
@@ -20,9 +20,11 @@
     "grunt-sails-linker": "~0.10.1",
     "grunt-sync": "0.5.2",
     "include-all": "^1.0.0",
+    "npm": "^6.9.0",
     "rc": "1.0.1",
     "sails": "~0.12.13",
     "sails-disk": "^0.10.10",
+    "sails-hook-email": "^0.12.1",
     "sails-hook-flash": "^0.2.2",
     "sails-mysql": "^0.11.5"
   },
